# stochastic-gbm

./: Cargo.toml  README.md
examples/: basic_simulation.rs
src/: gbm.rs  lib.rs
