[package]
name = "stochastic-gbm"
version = "0.1.0"
authors = ["nzengi <zenginureddin1@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Rust library for simulating Geometric Brownian Motion (GBM) process for financial asset modeling."
readme = "README.md"
repository = "https://github.com/nzengi/stochastic-gbm"
homepage = "https://github.com/nzengi/stochastic-gbm"
documentation = "https://docs.rs/stochastic-gbm"
keywords = ["stochastic", "finance", "GBM", "simulation", "mathematics"]
categories = ["science", "simulation", "mathematics", "finance"]

[dependencies]
rand = "0.8"